--- a/artemisa-front/src/app/pages/add-employee/add-employee.page.html
+++ b/artemisa-front/src/app/pages/add-employee/add-employee.page.html
@@ -1,16 +1,17 @@
 <ion-content id="ion-content">
+  <ngx-spinner *ngIf="data" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
   <div id="page-container">
     <div class="container pb-5 pt-3">
       <div class="row pb-3">
         <div class="col-md-12 col-lg-12 pb-3">
-          <h4><b>{{data ? "Modificar" : "Agregar"}} Empleado</b></h4>
-          <h6>{{data ? "Completa todos los campos correctamente para modificar al empleado." : "Completa todos los campos correctamente para ingresar un nuevo empleado."}}</h6>
+          <h4><b>{{data ? "Modificar" : "Agregar"}} {{ myProfile ? "mi perfil" : "Empleado" }}</b></h4>
+          <h6>{{myProfile ? "Completa todos los campos correctamente para modificar tu perfil." : (data ? "Completa todos los campos correctamente para modificar al empleado." : "Completa todos los campos correctamente para ingresar un nuevo empleado.")}}</h6>
         </div>
         <div class="col-md-12 col-lg-12">
           <div class="card mb-3">
             <div class="card-body">
               <form class="row" [formGroup]="form" (ngSubmit)="submit()">
-                <div class="mb-3 col-lg-4 col-ms-4">
+                <div class="mb-3 col-lg-4 col-ms-4" *ngIf="!data">
                   <label for="input" class="form-label">Tipo de documento</label>
                   <select class="form-select" placeholder="Selecciona el tipo de documento" formControlName="documentoTipo" aria-label="Tipo de documento" [ngClass]="{'is-invalid' : form.controls['documentoTipo'].invalid && (form.controls['documentoTipo'].dirty || form.controls['documentoTipo'].touched)}">
                     <option selected value="">Selecciona el tipo de documento</option>
@@ -23,7 +24,7 @@
                     <div class="invalid-feedback" *ngIf="form.controls['documentoTipo'].errors.required">Es necesario que selecciones el tipo de documento.</div>
                   </ng-container>
                 </div>
-                <div class="mb-3 col-lg-8 col-ms-8">
+                <div class="mb-3 col-lg-8 col-ms-8" *ngIf="!data">
                   <label for="input" class="form-label">Documento</label>
                   <input type="text" formControlName="documentoValor" class="form-control" aria-describedby="help" placeholder="XXXXXXXXXX" [ngClass]="{'is-invalid' : form.controls['documentoValor'].invalid && (form.controls['documentoValor'].dirty || form.controls['documentoValor'].touched)}">
                   <div class="form-text">Documento de identidad (Ej: 1710000091).</div>
@@ -35,7 +36,7 @@
                 <div class="mb-3 col-lg-6 col-ms-12">
                   <label for="input" class="form-label">Nombre</label>
                   <input type="text" class="form-control" aria-describedby="help" placeholder="Juan" formControlName="nombre" [ngClass]="{'is-invalid' : form.controls['nombre'].invalid && (form.controls['nombre'].dirty || form.controls['nombre'].touched)}">
-                  <div class="form-text">Nombre del empleado (Ej: Juan).</div>
+                  <div class="form-text">{{ myProfile ? "Nombre" : "Nombre del empleado" }} (Ej: Juan).</div>
                   <ng-container *ngIf="form.controls['nombre'].invalid && (form.controls['nombre'].dirty || form.controls['nombre'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['nombre'].errors.required">Es necesario que ingreses el nombre.</div>
                   </ng-container>
@@ -43,7 +44,7 @@
                 <div class="mb-3 col-lg-6 col-ms-12">
                   <label for="input" class="form-label">Apellido</label>
                   <input type="text" class="form-control" aria-describedby="help" placeholder="Perez" formControlName="apellido" [ngClass]="{'is-invalid' : form.controls['apellido'].invalid && (form.controls['apellido'].dirty || form.controls['apellido'].touched)}">
-                  <div class="form-text">Apellido del empleado (Ej: Rodríguez).</div>
+                  <div class="form-text">{{ myProfile ? "Apellido" : "Apellido del empleado" }} (Ej: Rodríguez).</div>
                   <ng-container *ngIf="form.controls['apellido'].invalid && (form.controls['apellido'].dirty || form.controls['apellido'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['apellido'].errors.required">Es necesario que ingreses el apellido.</div>
                   </ng-container>
@@ -64,7 +65,7 @@
                 <div class="mb-3 col-lg-4 col-ms-6">
                   <label for="input" class="form-label">Correo</label>
                   <input type="email" class="form-control" aria-describedby="help" placeholder="ejemplo@hotmail.com" formControlName="email" [ngClass]="{'is-invalid' : form.controls['email'].invalid && (form.controls['email'].dirty || form.controls['email'].touched)}">
-                  <div class="form-text">Correo del empleado (Ej: ejemplo@hotmail.com).</div>
+                  <div class="form-text">{{ myProfile ? "Correo" : "Correo del empleado" }} (Ej: ejemplo@hotmail.com).</div>
                   <ng-container *ngIf="form.controls['email'].invalid && (form.controls['email'].dirty || form.controls['email'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['email'].errors.required">Es necesario que ingreses un correo.</div>
                     <div class="invalid-feedback" *ngIf="form.controls['email'].errors.email">Es necesario que ingreses un correo válido.</div>
@@ -73,7 +74,7 @@
                 <div class="mb-3 col-lg-4 col-ms-4">
                   <label for="input" class="form-label">Teléfono</label>
                   <input type="phone" class="form-control" aria-describedby="help" placeholder="0989XXXXXX" formControlName="telefono" [ngClass]="{'is-invalid' : form.controls['telefono'].invalid && (form.controls['telefono'].dirty || form.controls['telefono'].touched)}">
-                  <div class="form-text">Teléfono del empleado (Ej: 0989300000).</div>
+                  <div class="form-text">{{ myProfile ? "Teléfono" : "Teléfono del empleado" }} (Ej: 0989300000).</div>
                   <ng-container *ngIf="form.controls['telefono'].invalid && (form.controls['telefono'].dirty || form.controls['telefono'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['telefono'].errors.required">Es necesario que ingreses un teléfono.</div>
                   </ng-container>
@@ -84,7 +85,7 @@
                     <option selected value="">Selecciona la Provincia</option>
                     <option *ngFor="let prov of provs" [value]="prov.id">{{prov.id}}</option>
                   </select>
-                  <div class="form-text">Provincia en la que vive el empleado.</div>
+                  <div class="form-text">{{ myProfile ? "Provincia en la que vive" : "Provincia en la que vive el empleado" }}.</div>
                   <ng-container *ngIf="form.controls['provincia'].invalid && (form.controls['provincia'].dirty || form.controls['provincia'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['provincia'].errors.required">Es necesario que ingreses una Provincia.</div>
                   </ng-container>
@@ -95,7 +96,7 @@
                     <option selected value="">Selecciona el Cantón</option>
                     <option *ngFor="let can of cantones" [value]="can">{{can}}</option>
                   </select>
-                  <div class="form-text">Cantón en el que vive el empleado.</div>
+                  <div class="form-text">{{ myProfile ? "Cantón en el que vive" : "Cantón en el que vive el empleado" }}.</div>
                   <ng-container *ngIf="form.controls['canton'].invalid && (form.controls['canton'].dirty || form.controls['canton'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['canton'].errors.required">Es necesario que selecciones un Cantón.</div>
                   </ng-container>
@@ -103,12 +104,12 @@
                 <div class="mb-3 col-lg-4 col-ms-12">
                   <label for="input" class="form-label">Dirección</label>
                   <input type="email" class="form-control" aria-describedby="help" placeholder="Av. del Maestro" formControlName="direccion" [ngClass]="{'is-invalid' : form.controls['direccion'].invalid && (form.controls['direccion'].dirty || form.controls['direccion'].touched)}">
-                  <div class="form-text">Dirección del empleado para los envíos.</div>
+                  <div class="form-text">Dirección.</div>
                   <ng-container *ngIf="form.controls['direccion'].invalid && (form.controls['direccion'].dirty || form.controls['direccion'].touched)">
                     <div class="invalid-feedback" *ngIf="form.controls['direccion'].errors.required">Es necesario que ingreses una dirección.</div>
                   </ng-container>
                 </div>
-                <div class="mb-3 col-lg-4 col-ms-12">
+                <div class="mb-3 col-lg-4 col-ms-12" *ngIf="!myProfile">
                   <label for="input" class="form-label">Tipo</label>
                   <select class="form-select" aria-describedby="help" formControlName="rango" [ngClass]="{'is-invalid' : form.controls['rango'].invalid && (form.controls['rango'].dirty || form.controls['rango'].touched)}">
                     <option selected value="">Selecciona el Rango</option>
