--- a/artemisa-front/src/app/pages/customers/customers.page.html
+++ b/artemisa-front/src/app/pages/customers/customers.page.html
@@ -40,17 +40,17 @@
             <div class="col-md-6 pb-3">
               <div style="width: 100%;width: 100%; height: 100%; display: flex; align-items: center;">
                 <ion-item style="width: 100%;">
-                  <ion-select style="width: 100%;" placeholder="Selecciona el campo a filtrar"
-                    (ionChange)="searchInput.type = $event.target['value'] === 'All' ? '' : $event.target['value']">
-                    <ion-select-option *ngFor="let type of types" [value]="type.name">{{type.name}}</ion-select-option>
+                  <ion-select style="width: 100%;" placeholder="Selecciona la categoría a filtrar"
+                    (ionChange)="filter = $event.target['value'] === 'All' ? '' : $event.target['value']">
+                    <ion-select-option *ngFor="let cat of types" [value]="cat.id">{{cat.name}}</ion-select-option>
+                    <ion-select-option value="All">Todas</ion-select-option>
                   </ion-select>
                 </ion-item>
               </div>
             </div>
             <div class="col-md-6 pb-3">
               <div style="width: 100%;width: 100%; height: 100%; display: flex; align-items: center;">
-                <input class="form-control" type="text" [(ngModel)]="searchInput.nombre"
-                  placeholder="Ingrese el texto a buscar...">
+                <input class="form-control" type="text" [(ngModel)]="searchInput[filter]" placeholder="Texto a buscar..." [disabled]="filter === ''">
               </div>
             </div>
           </div>
@@ -59,11 +59,11 @@
               <table class="table table-hover table-dynamic" style="width:100%">
                 <thead class="datatable-header">
                   <tr>
-                    <th (click)="sort('documento.valor')" class="btn-style">
+                    <th (click)="sort('documentoValor')" class="btn-style">
                       Identificación
                       <ion-icon name="arrow-down-outline"
-                        *ngIf="sortDirection == 1 && orderHeader === 'documento.valor'"></ion-icon>
-                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'documento.valor'">
+                        *ngIf="sortDirection == 1 && orderHeader === 'documentoValor'"></ion-icon>
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'documentoValor'">
                       </ion-icon>
                     </th>
                     <th (click)="sort('nombre')" class="btn-style">
@@ -87,11 +87,11 @@
                       <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'telefono'">
                       </ion-icon>
                     </th>
-                    <th (click)="sort('categoria')" class="btn-style">
+                    <th (click)="sort('categoryName')" class="btn-style">
                       Categoría
-                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'categoria'">
+                      <ion-icon name="arrow-down-outline" *ngIf="sortDirection == 1 && orderHeader === 'categoryName'">
                       </ion-icon>
-                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'categoria'">
+                      <ion-icon name="arrow-up-outline" *ngIf="sortDirection == 2 && orderHeader === 'categoryName'">
                       </ion-icon>
                     </th>
                     <th>
@@ -104,8 +104,8 @@
                     <td class="align-middle">
                       <ion-label>
                         <h3 class="table-dynamic-hide"><b>Identificación</b></h3>
-                        {{user.documento?.valor}}
-                        <h3><small>{{user.documento?.tipo === 0 ? "Cédula" : (user.documento?.tipo === 1 ? 'RUC' : 'Otro') }}</small></h3>
+                        {{user.documentoValor}}
+                        <h3><small>{{user.documentoTipo === 0 || user.documentoTipo === '0' ? "Cédula" : (user.documentoTipo === 1 || user.documentoTipo === '1' ? 'RUC' : 'Otro') }}</small></h3>
                       </ion-label>
                     </td>
                     <td class="align-middle">
@@ -131,7 +131,7 @@
                     <td class="align-middle">
                       <ion-label>
                         <h3 class="table-dynamic-hide"><b>Categoría</b></h3>
-                        {{ user.categoria }}
+                        {{ user.categoryName }}
                       </ion-label>
                     </td>
                     <td class="align-middle">
