--- a/artemisa-front/src/app/pages/add-order/add-order.page.scss
+++ b/artemisa-front/src/app/pages/add-order/add-order.page.scss
@@ -20,6 +20,7 @@ ion-item {
 .card.selected:active {background: #000000;color: white;}
 .flex-stock {
     display: flex;
+    justify-content: center;
     align-items: center;grid-gap:5px
 }.danger{background: #fddddd;}
 .medium{background:#ffc79757;}
